fix the too big elements bug

--- a/frontend/components/default.css
+++ b/frontend/components/default.css
@@ -4,13 +4,15 @@
 @import "../vendor/Bootstrap/bootstrap.min.css";
 
 :root{
-    font-size: 10px;
+    font-size: 9.3px;
+    zoom: .85;
 }
 
 html{
     box-sizing: border-box;
     font-size: 1.6rem;
     user-select: none;
+
 }
 
 body{
@@ -18,6 +20,7 @@ body{
     background-color: var(--app-bg-color);
     font-family: "IRANSans";
     transition: background-color 80ms ease;
+
 }
 
 *,
@@ -26,6 +29,7 @@ body{
     outline: none;
     box-sizing: inherit;
     transition: color 50ms ease;
+
 }
 
 a {
